# zkd

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  examples.yml  prebuilds.yml  python-wheels.yml
bindings/flutter_plugin/: CHANGELOG.md  README.md  pubspec.yaml
bindings/flutter_plugin/android/: build.gradle  settings.gradle
bindings/flutter_plugin/android/src/main/: AndroidManifest.xml
bindings/flutter_plugin/example/: pubspec.yaml
bindings/flutter_plugin/example/android/app/src/main/: AndroidManifest.xml
bindings/flutter_plugin/example/ios/Runner/: Info.plist
bindings/flutter_plugin/example/ios/Runner.xcodeproj/: project.pbxproj
bindings/flutter_plugin/example/lib/: main.dart
bindings/flutter_plugin/example/test/: widget_test.dart
bindings/flutter_plugin/ios/: zkprov_flutter.podspec
bindings/flutter_plugin/ios/ZkProv.xcframework/: Info.plist
bindings/flutter_plugin/lib/: zkprov_ffi.dart  zkprov_flutter.dart
bindings/flutter_plugin/native_stub/: Cargo.toml  README.md
bindings/flutter_plugin/native_stub/.cargo/: config.toml
bindings/flutter_plugin/native_stub/src/: lib.rs
bindings/node/: .gitignore  .npmignore  README.md  binding.gyp  index.d.ts  index.js  index.ts  package-lock.json  package.json  tsconfig.json
bindings/node/scripts/: prebuild.js
bindings/node/src/: addon.cc
bindings/node/test/: smoke.mjs
bindings/python/: README.md  pyproject.toml  setup.cfg  setup.py
bindings/python/tests/: test_loader.py  test_roundtrip_example.py
bindings/python/zkprov/: __init__.py  hello.py
bindings/wasm/: README.md  demo.html  loader.js  smoke_node.mjs  zkprov_wasi.wasm
crates/backends/native/: Cargo.toml
crates/backends/native/src/: lib.rs
crates/backends/native/tests/: native_caps.rs  native_hash.rs  native_proof.rs
crates/backends/winterfell/: Cargo.toml
crates/backends/winterfell/src/: lib.rs
crates/bundles/: Cargo.toml
crates/bundles/src/: arith.rs  lib.rs  pedersen.rs  range.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: cli_commit.rs  cli_integration.rs  cli_validate.rs
crates/corelib/: Cargo.toml
crates/corelib/src/: air.rs  backend.rs  config.rs  errors.rs  lib.rs  profile.rs  proof.rs  registry.rs  trace.rs  validate.rs  validation.rs
crates/corelib/src/air/: bindings.rs  parser.rs  parser_yaml.rs  types.rs  validate.rs
crates/corelib/src/crypto/: blake3.rs  field.rs  hash.rs  keccak.rs  merkle.rs  mod.rs  poseidon2.rs  registry.rs  rescue.rs
crates/corelib/src/evm/: abi.rs  digest.rs  mod.rs
crates/corelib/src/gadgets/: arithmetic.rs  commitment.rs  mod.rs  range.rs
crates/corelib/src/zkprov_bundles/: arith.rs  errors.rs  mod.rs  pedersen.rs  range.rs
crates/corelib/tests/: air_caps.rs  air_parse.rs  crypto_field.rs  crypto_hash.rs  crypto_merkle.rs  crypto_registry.rs  evm_abi.rs  evm_abi_parity.rs  evm_digest_from_proof.rs  gadgets_arith.rs  gadgets_commitment.rs  gadgets_range.rs  header_hash.rs  profile_parse.rs  proof_header.rs  registry_smoke.rs  trace_shape.rs  validate_caps.rs
crates/ffi-c/: Cargo.toml
crates/ffi-c/src/: error.rs  ffi_json.rs  lib.rs
crates/ffi-c/tests/: abi.rs  run_examples_script.rs
docs/: ARCHITECTURE.md  INTERFACES.md  RECURSION.md  RFC-ZK01.md  ROADMAP.md  TASKLIST.md  TEST-PLAN.md  VALIDATION.md  air-yaml.md  bindings-cookbook.md  commitment-guide.md  evm-interop.md  golden-vectors.md  manifest-format.md  profile-catalog.md  runbook.md  security-review.md  threat-model.md
docs/adr/: ADR-001.md
docs/site/: sidebar.json
examples/: README.md
examples/air/: commit_demo.air  toy.air
examples/c/: roundtrip.c
examples/evm_verifier/: foundry.toml
examples/evm_verifier/contracts/: VerifierStub.sol
examples/evm_verifier/test/: VerifierStub.t.sol
examples/evm_verifier/testdata/: body.abi  digest.hex  meta.abi  meta.json
examples/flutter_app/: README.md  pubspec.yaml
examples/flutter_app/android/app/: build.gradle.kts
examples/flutter_app/android/app/src/main/kotlin/dev/zkprov/zkprov_flutter_example/: MainActivity.kt
examples/flutter_app/assets/: toy.air
examples/flutter_app/ios/: Podfile
examples/flutter_app/ios/Runner.xcodeproj/: project.pbxproj
examples/flutter_app/ios/RunnerTests/: RunnerTests.swift
examples/flutter_app/lib/: main.dart
examples/node/: package-lock.json  package.json  roundtrip.mjs
examples/python/: roundtrip.py
examples/wasm/: smoke_node.mjs
include/: zkprov.h
profiles/: balanced.toml  dev-fast.toml  secure.toml
scripts/: bench_vector.sh  run_bench.sh  run_examples.sh  run_vector_tests.sh  rustc-wasi-wrapper
tests/: air_ir_degree.rs  air_ir_parser.rs  evm_interop.rs  evm_parity.rs  ffi_roundtrip.c  privacy_gadgets.rs  validation_commitments.rs  vector_parity.rs  wasm_wasi_interop.sh  yaml_roundtrip.rs
