[workspace]
members = [
  "crates/corelib",
  "crates/backends/native",
  "crates/ffi-c",
  "crates/cli",
  "crates/bundles"
]
resolver = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = "thin"
opt-level = "z"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"
authors = ["ZKProv Contributors"]

[workspace.dependencies]
anyhow = "1.0.86"
blake3 = "1.5.4"
clap = { version = "4.5.13", features = ["derive"] }
once_cell = "1.19.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
thiserror = "2.0.17"
libc = "0.2.155"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
