[package]
name = "zkprov-bundles"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
zkprov-corelib = { path = "../corelib" }
zkprov-backend-native = { path = "../backends/native" }
serde_json = { workspace = true }

[dev-dependencies]
toml = "0.9.8"
serde_yaml = "0.9.34"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
alloy-sol-types = "1.4.1"

[[test]]
name = "privacy_gadgets"
path = "../../tests/privacy_gadgets.rs"

[[test]]
name = "evm_interop"
path = "../../tests/evm_interop.rs"

[[test]]
name = "yaml_roundtrip"
path = "../../tests/yaml_roundtrip.rs"

[[test]]
name = "vector_parity"
path = "../../tests/vector_parity.rs"

[[test]]
name = "evm_parity"
path = "../../tests/evm_parity.rs"
