[package]
name = "zkprov-corelib"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
blake3 = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9.34"
thiserror = { workspace = true }
toml = "0.9.8"
regex = "1.10.6"
tiny-keccak = { version = "2.0.2", default-features = false, features = ["keccak"] }
num-bigint = "0.4.6"
num-traits = "0.2.19"
alloy-sol-types = "1.4.1"

[dev-dependencies]
zkprov-backend-native = { path = "../backends/native" }
tempfile = "3.10.1"

[[test]]
name = "air_ir_parser"
path = "../../tests/air_ir_parser.rs"

[[test]]
name = "air_ir_degree"
path = "../../tests/air_ir_degree.rs"
