[package]
name = "zkprov-ffi-c"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "zkprov_ffi_c"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
libc = { workspace = true }

[build-dependencies]
