[package]
name = "zkprov-ffi-c"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "zkprov"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zkprov-corelib = { path = "../corelib" }
zkprov-backend-native = { path = "../backends/native" }
