[package]
name = "zkprov-backend-winterfell"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
winterfell = "0.13.1"
rand = "0.9.2"
zkprov-corelib = { path = "../../corelib" }
zkprov-bundles = { path = "../../bundles" }

[features]
default = []
std = []
